crud de categorias y documentacion en swagger
